Fix z-indexing of logo

--- a/assets/sass/site/_header.scss
+++ b/assets/sass/site/_header.scss
@@ -96,6 +96,7 @@
 }
 
 .site-title a {
+	position: relative;
 	display: block;
 	width: 100%;
 	height: 100%;
