--- a/style.css
+++ b/style.css
@@ -1080,6 +1080,7 @@ ul.instagram-pics {
 }
 
 .site-title a {
+  position: relative;
   display: block;
   width: 100%;
   height: 100%;
